# auto-42share

./: .env.example  .gitignore  42share.crx  CHANGELOG  README.md  __version__.py  config.py  google.py  log.py  main.py  main.spec  prompts.txt  pyproject.toml  questions.csv  read_csv.py  requirements.txt  ui.py  write_excel.py
